--- a/index.html
+++ b/index.html
@@ -657,7 +657,9 @@
 		  <div class="right">
 		  	<div class="copy_P"><img src="nav.png"></div>
 		  	<p class="copy">Copyright © 2024 jeonghyeon All rights reserved.</p>
+		  	<a href="https://jeongdeulda.github.io/Recycle/" class="a">
 		  	<p class="go">분리수거 방법 전체 보러가기→</p>
+		  	</a>
 		  </div>
 
 </section>
