--- a/index.html
+++ b/index.html
@@ -263,6 +263,8 @@
     		.copy2{color: white; margin-left: none; margin-top: none;}
     		.go2{color: none; margin-left: none; margin-top: none; font-size: none; border: none; padding: none; display: none;}
     		.All{padding-top: none; background: none;}
+		.a{text-decoration: none; color: white;}
+    		a:active {color: white;}
 
     		
 
@@ -457,7 +459,10 @@
     		.copy2{color: white; margin-left: 20px; margin-top: 10px;}
     		.go2{color: white; margin-left: 20px; margin-top: 10px; font-size: 1rem; border: 1px solid white; padding: 10px; display: inline-block;}
     		.All{padding-top: 0px; background: #8DE747;}
+	    	.a{text-decoration: none; color: white;}
+    		a:active {color: white;}
 
+	    
 
 
 
